[package]
name = "n3xt_shellcode_runner_cli_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
thiserror = "2.0.16"
windows = { version = "0.61.3", features = [
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_Threading",
] }

[[bin]]
name = "n3xtSCrun"
path = "src/main.rs"
